methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:14: error: type mismatch;
 found   : Unit
 required: Boolean
  for(i<- 1 to 6){
       ^